--- a/index.html
+++ b/index.html
@@ -31,29 +31,63 @@
                     </ul>
                 </div>
             </div>
-            </nav>
+        </nav>
     </header>
     <main class="container" id="mainIndex">
         <section class="row">
-            <div class="col-md-2 col-xs-4 img-sobre">
+            <div class="col-md-2 img-sobre">
                 <figure>
                     <img src="./Assets/img/perfil.jpg" alt="Gabriela Zanetti">
                 </figure>
             </div>
-            <div class="col-md-10 col-xs-8 text-sobre">
+            <div class="col-md-10 text-sobre">
                 <p>
                     Olá, eu me chamo Gabriela, este é meu portfólio, e aqui você verá um pouco sobre meu trabalho, estudos e sobre mim.<br>
                     Eu tenho <span id="idade"></span> anos de idade, busco conhecimento sobre tecnologia, meu nicho atualmente e na web, sou apaixonada por JavaScript e design, penso que o site consegue se comunicar melhor com seu usuário por uma interface clara e descritiva.
                 </p>
             </div>
             <!-- 
-                Atualmente estou trabalhando como desenvolvedora Web na Universidade Regional do Noroeste do Estado do Rio Grande do Sul.
-                Tenho experiência em JavaScript, css, sass, html e PHP em aproximadamente 1 ano.
+                
                 Estou cursando Ciências da Computação na Universidade Regional do Noroeste do Estado do Rio Grande do Sul, e atualmente estou no 2 semestre.
              -->
         </section>
         <section class="row">
-
+            <div class="col-md-10 text-sobre">
+                <p>
+                    Atualmente estou trabalhando como desenvolvedora Web na Universidade Regional do Noroeste do Estado do Rio Grande do Sul. <br>
+                    Tenho experiência em JavaScript, css, sass, html e PHP em aproximadamente 1 ano.
+                </p>
+            </div>
+            <div class="col-md-2 content">
+                <figure class="content__container">
+                    <div class="content__container"><img src="./Assets/img/github.png" class="inicio" alt="Github"></div>
+                    <div class="content__container__list">
+                        <img src="./Assets/img/css.png" class="linguagens" alt="CSS">
+                        <img src="./Assets/img/html.jpg" class="linguagens" alt="HTML">
+                        <img src="./Assets/img/js.png" class="linguagens" alt="JavaScript">
+                        <img src="./Assets/img/github.png" class="linguagens" alt="Github">
+                    </div>
+                </figure>
+            </div>
+        </section>
+        <section class="row">
+            <div class="col-md-12 porcentFacul">
+                <p class="col-md-12">Estou cursando Ciências da Computação na Universidade Regional do Noroeste do Estado do Rio Grande do Sul, e atualmente estou no 2 semestre.</p>
+                <div>
+                    <div class="progress" id="porcent">
+                        <span class="progress-left">
+                            <span class="progress-bar"></span>
+                        </span>
+                        <span class="progress-right">
+                            <span class="progress-bar"></span>
+                        </span>
+                        <div class="progress-value">
+                            <div id="porcent-numb">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer id="footer">
