--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="imagem/png" href="assets//img/icon.jpg"/>
+    <link rel="icon" type="imagem/png" href="./Assets/img/icon.jpg  "/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/d5dc02a403.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./Assets/css/style.css">
@@ -26,7 +26,7 @@
                             <a class="nav-link" href="#"><i class="fa-solid fa-gears"></i>  Projetos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Social</a>
+                            <a class="nav-link" href="pages/social.html">Social</a>
                         </li>
                     </ul>
                 </div>
@@ -34,61 +34,58 @@
         </nav>
     </header>
     <main class="container" id="mainIndex">
-        <section class="row">
-            <div class="col-md-2 img-sobre">
+        <section class="header-me">
+            <h1><i class="fa-brands fa-js-square"></i> - Web Developer - <i class="fa-brands fa-css3-alt"></i></h1>
+            <hr>
+        </section>
+        <section class="row-me">
+            <div class="text-sobre">
+                <p>
+                    <strong>Olá,</strong><br />
+                    <small>
+                        Eu me chamo Gabriela, este é meu portfólio, e aqui você verá um pouco sobre meu trabalho, estudos e sobre mim.<br>
+                    Eu tenho <span id="idade"></span> anos de idade, busco conhecimento sobre tecnologia, meu nicho atualmente e na web, sou apaixonada por JavaScript e design, penso que o site consegue se comunicar melhor com seu usuário por uma interface clara e descritiva.
+                    </small>
+                </p>
+            </div>
+            <div class="img-sobre">
                 <figure>
                     <img src="./Assets/img/perfil.jpg" alt="Gabriela Zanetti">
                 </figure>
             </div>
-            <div class="col-md-10 text-sobre">
+            <div class="text-sobre">
                 <p>
-                    Olá, eu me chamo Gabriela, este é meu portfólio, e aqui você verá um pouco sobre meu trabalho, estudos e sobre mim.<br>
-                    Eu tenho <span id="idade"></span> anos de idade, busco conhecimento sobre tecnologia, meu nicho atualmente e na web, sou apaixonada por JavaScript e design, penso que o site consegue se comunicar melhor com seu usuário por uma interface clara e descritiva.
+                    <small> 
+                        Atualmente estou trabalhando como desenvolvedora Web na Universidade Regional do Noroeste do Estado do Rio Grande do Sul. <br>
+                        Tenho experiência em JavaScript, css, sass, html e PHP em aproximadamente 1 ano.
+                    </small>
                 </p>
             </div>
-            <!-- 
-                
-                Estou cursando Ciências da Computação na Universidade Regional do Noroeste do Estado do Rio Grande do Sul, e atualmente estou no 2 semestre.
-             -->
         </section>
-        <section class="row">
-            <div class="col-md-10 text-sobre">
-                <p>
-                    Atualmente estou trabalhando como desenvolvedora Web na Universidade Regional do Noroeste do Estado do Rio Grande do Sul. <br>
-                    Tenho experiência em JavaScript, css, sass, html e PHP em aproximadamente 1 ano.
-                </p>
-            </div>
-            <div class="col-md-2 content">
-                <figure class="content__container">
-                    <div class="content__container"><img src="./Assets/img/github.png" class="inicio" alt="Github"></div>
-                    <div class="content__container__list">
-                        <img src="./Assets/img/css.png" class="linguagens" alt="CSS">
-                        <img src="./Assets/img/html.jpg" class="linguagens" alt="HTML">
-                        <img src="./Assets/img/js.png" class="linguagens" alt="JavaScript">
-                        <img src="./Assets/img/github.png" class="linguagens" alt="Github">
-                    </div>
-                </figure>
-            </div>
+        <section class="header-me">
+            <hr>
         </section>
-        <section class="row">
+        <section class="linguagens">
+            - 
+            <i class="fa-brands fa-html5"></i> - 
+            <i class="fa-brands fa-css3-alt"></i> - 
+            <i class="fa-brands fa-sass"></i> - 
+            <i class="fa-brands fa-js-square"></i> - 
+            <i class="fa-brands fa-php"></i>
+                 - 
+        </section>
+        <section class="row-me">
             <div class="col-md-12 porcentFacul">
                 <p class="col-md-12">Estou cursando Ciências da Computação na Universidade Regional do Noroeste do Estado do Rio Grande do Sul, e atualmente estou no 2 semestre.</p>
-                <div>
+                <div class="col-md-12">
                     <div class="progress" id="porcent">
-                        <span class="progress-left">
-                            <span class="progress-bar"></span>
-                        </span>
-                        <span class="progress-right">
-                            <span class="progress-bar"></span>
-                        </span>
-                        <div class="progress-value">
-                            <div id="porcent-numb">
-                            </div>
+                        <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                            <span id="porcent-numb"></span>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </section>  
     </main>
     <footer id="footer">
         CopyRigth © <span id="anoAtual"></span>
