coloracao dos icones
coloracao dos icones

--- a/index.html
+++ b/index.html
@@ -67,12 +67,13 @@
         </section>
         <section class="linguagens">
             - 
-            <i class="fa-brands fa-html5"></i> - 
-            <i class="fa-brands fa-css3-alt"></i> - 
-            <i class="fa-brands fa-sass"></i> - 
-            <i class="fa-brands fa-js-square"></i> - 
-            <i class="fa-brands fa-php"></i>
-                 - 
+            <i title="HTML" class="fa-brands fa-html5"></i> - 
+            <i title="CSS" class="fa-brands fa-css3-alt"></i> - 
+            <i title="SASS" class="fa-brands fa-sass"></i> - 
+            <i title="JavaScript" class="fa-brands fa-js-square"></i> - 
+            <i title="PHP" class="fa-brands fa-php"></i> - 
+            <i title="Bootstrap" class="fa-brands fa-bootstrap"></i> 
+            - 
         </section>
         <section class="row-me">
             <div class="col-md-12 porcentFacul">
