--- a/pages/social.html
+++ b/pages/social.html
@@ -38,6 +38,8 @@
         <a target="_blank" href="https://www.linkedin.com/in/gabriela-zanetti-88a0401b5/" class="linkedin-link"><i class="fa-brands fa-linkedin"></i> Linkedin</a>
         <a target="_blank" href="https://www.instagram.com/gabiirz/" class="insta-link"><i class="fa-brands fa-instagram"></i> Instagram</a>
         <a target="_blank" href="https://codepen.io/Gabi_RZ/" class="github-link"><i class="fa-brands fa-codepen"></i> Codepen</a>
+        <a target="_blank" href="https://discord.gg/saVUXVBZ" class="discord-link"><i class="fa-brands fa-discord"></i> Discord</a>
+        <a target="_blank" href="mailto:Gabriela.zanetti@unijui.edu.br" class="at-link"><i class="fa-brands fa-at"></i> Gmail</a>
     </main>
     <footer id="footer">
         CopyRigth © <span id="anoAtual"></span>
