--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="collapse navbar-collapse" id="menu">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fa-solid fa-gears"></i>  Projetos</a>
+                            <a class="nav-link" href="pages/projetos.html"><i class="fa-solid fa-gears"></i>  Projetos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="pages/social.html">Social</a>
